--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,12 @@
     "angular-route": "~1.4.0",
     "angular-loader": "~1.4.0",
     "angular-mocks": "~1.4.0",
-    "html5-boilerplate": "~5.2.0"
+    "html5-boilerplate": "~5.2.0",
+    "bootstrap": "^3.3.6",
+    "angular-resource": "^1.5.6",
+    "weather-icons": "^2.0.10"
+  },
+  "resolutions": {
+    "angular": "~1.4.0"
   }
 }
