--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "angular-seed",
+  "name": "tgdashboard",
   "private": true,
   "version": "0.0.0",
-  "description": "A starter project for AngularJS",
+  "description": "An office dashboard application based on Angular.js and Bootstrap",
   "repository": "https://github.com/angular/angular-seed",
   "license": "MIT",
   "devDependencies": {
