--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "html5-boilerplate": "~5.2.0",
     "angular-resource": "^1.5.6",
     "weather-icons": "^2.0.10",
-    "angular-ui-router": "^0.3.1"
+    "angular-ui-router": "^0.3.1",
+    "tether": "^1.3.3"
   },
   "resolutions": {
     "angular": "~1.4.0"
