--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "angular-resource": "^1.5.6",
     "weather-icons": "^2.0.10",
     "angular-ui-router": "^0.3.1",
-    "tether": "^1.3.3"
+    "tether": "^1.3.3",
+    "angular-chart.js": "^1.0.0"
   },
   "resolutions": {
     "angular": "~1.4.0"
